# name-resolver

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
cf-worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
cf-worker-js/: package-lock.json  package.json  wrangler.toml
cf-worker-js/src/: worker.ts
cf-worker/src/: constants.rs  derivation.rs  lib.rs
src/: constants.rs  derivation.rs  lib.rs
tests/: derivation.rs  index.test.ts  package-lock.json  package.json
