[package]
name = "name-resolver"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.10"
serde_json = "1.0.82"
reqwest ={ version = "0.11.11", features = ["json"]}
sha2 = "0.10.2"
curve25519-dalek = "3.2.1"
base64 = "0.13.0"
bs58 = "0.4.0"
anyhow = "1.0"
futures = "0.3.21"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }


[dev-dependencies]
tokio = {version = "1.20.0", features = ["macros"]}
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
